<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="Device list">
        <group android:id="@+id/dev_list"
            android:checkableBehavior="single">
            <item
                android:id="@+id/nav_add_new"
                android:icon="@drawable/plus"
                android:title="@string/menu_add" />
        </group>
    </item>

</menu>
