<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="@color/colorTextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_language" />

    <RadioGroup
        android:id="@+id/rgLanguage"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioButton
            android:id="@+id/rbEn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/en_language" />

        <RadioButton
            android:id="@+id/rbRu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ru_language" />
    </RadioGroup>
</LinearLayout>