<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:orientation="vertical"
    android:layout_gravity="top"
    android:gravity="center"
    tools:context=".ui.fragments.AddFragment">

        <Button
            android:id="@+id/qr_button"
            android:background="@drawable/rounded_not_filled_button"
            android:textColor="@color/green_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/scan_qr_code_but" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:orientation="vertical">

            <EditText
                android:id="@+id/dev_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/name_field_hint"
                android:inputType="textPersonName"
                android:maxLength="15" />

            <EditText
                android:id="@+id/dev_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/id_field_hint"
                android:inputType="number"
                android:maxLength="15" />

            <EditText
                android:id="@+id/dev_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/password_field_hint"
                android:inputType="textPassword"
                android:maxLength="30" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cnl_button"
                android:background="@drawable/rounded_not_filled_button"
                android:textColor="#356115"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/cancel_text" />

            <Button
                android:id="@+id/ok_button"
                android:background="@drawable/rounded_filled_button"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/ok_text" />
        </LinearLayout>
</LinearLayout>