<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:background="@color/colorItemBackground"
            android:clickable="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/timeZoneLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/colorTextNormal"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:text="@string/time_zone" />

                <TextView
                    android:id="@+id/timeZoneText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorNonPrimaryText"
                    android:layout_weight="9" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_place_black_24dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:background="@color/colorItemBackground"
            android:clickable="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/languageLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/colorTextNormal"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:text="@string/language" />

                <TextView
                    android:id="@+id/languageText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorNonPrimaryText"
                    android:layout_weight="9" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_language_black_24dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:background="@color/colorItemBackground"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/turnOnOffNotifications"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_marginStart="15dp"
                android:text="@string/disable_notifications"
                android:textColor="@color/colorDisableText"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:background="@color/colorItemBackground"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/turnOnOff"
                android:layout_marginTop="4dp"
                android:layout_marginStart="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:text="@string/disable_all_devices"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop = "4dp"
            android:background="@color/colorItemBackground"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cnl_button"
                android:background="@drawable/rounded_not_filled_button"
                android:textColor="#356115"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/cancel_text" />

            <Button
                android:id="@+id/accpt_button"
                android:background="@drawable/rounded_filled_button"
                android:textColor="@color/colorItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/accept" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>