<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/colorItemBackground"
    android:orientation="vertical">

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginStart="15dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/catface" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="@color/colorTextNormal" />

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/colorNonPrimaryText"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_filled_button"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/colorItemBackground"
            android:text="@string/edit_but" />

        <Button
            android:id="@+id/btFeedNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/rounded_not_filled_button"
            android:text="@string/feed_now_but"
            android:textColor="@color/green_text_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:src="@drawable/infoicon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorNonPrimaryText"
                    android:text="@string/id_header_text" />

                <TextView
                    android:id="@+id/tvDevID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorNonPrimaryText"
                    android:layout_weight="20" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:src="@drawable/foodicon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorNonPrimaryText"
                    android:text="@string/food_level_header" />

                <TextView
                    android:id="@+id/tvDevFoodLvl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorNonPrimaryText"
                    android:layout_weight="20" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:src="@drawable/clock" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorNonPrimaryText"
                    android:text="@string/next_feeding_time_header" />

                <TextView
                    android:id="@+id/tvDevNextFeeding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorNonPrimaryText"
                    android:layout_weight="20" />
            </LinearLayout>
        </LinearLayout>
</LinearLayout>

